custom decorator, creating user, user-settings

--- a/flaskblog/templates/admin/admin-comments.html
+++ b/flaskblog/templates/admin/admin-comments.html
@@ -77,6 +77,10 @@
     </div>
 </div>
 
+{% endblock %}
+
+{% block scripts %}
+
 <script>
     $(document).ready(function () {
         $('#datatable-posts').DataTable({
@@ -97,5 +101,4 @@
     });
 </script>
 
-
-{% endblock %}
+{% endblock scripts %}
