--- a/flaskblog/templates/admin/admin-posts.html
+++ b/flaskblog/templates/admin/admin-posts.html
@@ -75,6 +75,9 @@
     </div>
 </div>
 
+{% endblock %}
+
+{% block scripts %}
 <script>
     // DataTable - Tablica
     $(document).ready(function () {
@@ -83,4 +86,4 @@
         });
     });
 </script>
-{% endblock %}
+{% endblock scripts %}
