--- a/flaskblog/templates/admin/admin-users.html
+++ b/flaskblog/templates/admin/admin-users.html
@@ -69,6 +69,9 @@
     </div>
 </div>
 
+{% endblock %}
+
+{% block scripts %}
 <script>
     // DataTable - Tablica
     $(document).ready(function () {
@@ -77,5 +80,4 @@
         });
     });
 </script>
-
-{% endblock %}
+{% endblock scripts %}
