--- a/flaskblog/templates/admin/admin-includes/admin-header.html
+++ b/flaskblog/templates/admin/admin-includes/admin-header.html
@@ -18,17 +18,19 @@
                 </a>
                 {% endif %}
                 <div class="dropdown-menu dropdown-menu-dark dropdown-menu-end">
-                    <a class="dropdown-item" href=""><i class="align-middle me-1" data-feather="user"></i>
-                        Profile</a>
+                    <!-- <a class="dropdown-item" href=""><i class="align-middle me-1" data-feather="user"></i>
+                        Profile</a> -->
                     <!-- <a class="dropdown-item" href="#"><i class="align-middle me-1" data-feather="pie-chart"></i>
                         Analytics</a> -->
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href=""><i class="align-middle me-1" data-feather="settings"></i>
-                        Settings & Privacy</a>
+                    <!-- <div class="dropdown-divider"></div> -->
+                    <a class="dropdown-item"
+                        href="{{ url_for('users.update_user_account_settings', user_id=current_user.id) }}"><i
+                            class="align-middle me-1" data-feather="settings"></i>
+                        Settings</a>
                     <!-- <a class="dropdown-item" href="#"><i class="align-middle me-1" data-feather="help-circle"></i>
                         Help Center</a> -->
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="{{ url_for('users.logout') }}">Log out</a>
+                    <a class="dropdown-item" href="{{ url_for('auth.logout') }}">Log out</a>
                 </div>
             </li>
         </ul>
