--- a/flaskblog/templates/admin/admin-includes/admin-sidebar.html
+++ b/flaskblog/templates/admin/admin-includes/admin-sidebar.html
@@ -15,12 +15,23 @@
                 </a>
             </li>
 
+            <li class="sidebar-header">Users</li>
+
             <li class="sidebar-item">
                 <a class="sidebar-link" href="{{ url_for('users.all_users') }}">
                     <i class="align-middle" data-feather="users"></i>
                     <span class="align-middle">All Users</span>
                 </a>
             </li>
+
+            <li class="sidebar-item">
+                <a class="sidebar-link" href="{{ url_for('users.create_user') }}">
+                    <i class="align-middle" data-feather="user-plus"></i>
+                    <span class="align-middle">Add New User</span>
+                </a>
+            </li>
+
+            <li class="sidebar-header">Posts</li>
 
             <li class="sidebar-item">
                 <a class="sidebar-link" href="{{ url_for('posts.all_posts')}}">
@@ -30,18 +41,18 @@
             </li>
 
             <li class="sidebar-item">
-                <a class="sidebar-link" href="{{ url_for('comments.all_comments') }}">
-                    <i class="align-middle" data-feather="message-square"></i>
-                    <span class="align-middle">All Comments</span>
-                </a>
-            </li>
-
-            <li class="sidebar-header">Post</li>
-
-            <li class="sidebar-item">
                 <a class="sidebar-link" href="{{ url_for('posts.add_post') }}">
                     <i class="align-middle" data-feather="file-plus"></i>
                     <span class="align-middle">Add New Post</span>
+                </a>
+            </li>
+
+            <li class="sidebar-header">Comments</li>
+
+            <li class="sidebar-item">
+                <a class="sidebar-link" href="{{ url_for('comments.all_comments') }}">
+                    <i class="align-middle" data-feather="message-square"></i>
+                    <span class="align-middle">All Comments</span>
                 </a>
             </li>
 
