--- a/flaskblog/templates/admin/admin-post-create.html
+++ b/flaskblog/templates/admin/admin-post-create.html
@@ -134,6 +134,9 @@
     </div>
 </div>
 
+{% endblock %}
+
+{% block scripts %}
 
 <script>
     CKEDITOR.replace('editor', {
@@ -143,4 +146,4 @@
     });
 </script>
 
-{% endblock %}
+{% endblock scripts %}
