--- a/flaskblog/templates/admin/admin-request-logs.html
+++ b/flaskblog/templates/admin/admin-request-logs.html
@@ -125,6 +125,9 @@
     </div>
 </div>
 
+{% endblock %}
+
+{% block scripts %}
 <script>
     // DataTable - Tablica
     $(document).ready(function () {
@@ -134,4 +137,4 @@
 
     });
 </script>
-{% endblock %}
+{% endblock scripts %}
