--- a/flaskblog/templates/admin/admin-user-preview.html
+++ b/flaskblog/templates/admin/admin-user-preview.html
@@ -33,6 +33,17 @@
                     <label class="form-label d-flex justify-content-start">
                         <div class="col-auto">
                             <i class="align-middle me-3" data-feather="user"></i>
+                            Name:
+                        </div>
+                        <div class="col-auto">
+                            <p class="text-primary ms-3">{{ user.name }} </p>
+                        </div>
+                    </label>
+                </div>
+                <div class="row mb-3">
+                    <label class="form-label d-flex justify-content-start">
+                        <div class="col-auto">
+                            <i class="align-middle me-3" data-feather="user"></i>
                             Username:
                         </div>
                         <div class="col-auto">
@@ -239,6 +250,12 @@
     </div>
 </div>
 
+{% endif %}
+
+{% endblock %}
+
+{% block scripts %}
+
 <script>
     $(document).ready(function () {
         // Show modal and set delete URL when delete button is clicked
@@ -263,6 +280,4 @@
     });
 </script>
 
-{% endif %}
-
-{% endblock %}
+{% endblock scripts %}
