--- a/flaskblog/templates/includes/footer.html
+++ b/flaskblog/templates/includes/footer.html
@@ -20,7 +20,7 @@
     -->
     <div class="footer-full">
         <a href="{{ url_for('main.about') }}" class="footerBtn" id="aboutBtn">About</a>
-        <a href="{{ url_for('users.login') }}" class="footerBtn" id="creditsBtn">	&copyMPD</a>
+        <a href="{{ url_for('auth.login') }}" class="footerBtn" id="creditsBtn"> &copyMPD</a>
         <a href="{{ url_for('main.contact') }}" class="footerBtn" id="contactBtn">Contact</a>
     </div>
 </footer>
