added request logging + categories

--- a/flaskblog/templates/admin/admin-includes/admin-sidebar.html
+++ b/flaskblog/templates/admin/admin-includes/admin-sidebar.html
@@ -47,6 +47,16 @@
                 </a>
             </li>
 
+            <li class="sidebar-header">Categories</li>
+
+            <li class="sidebar-item">
+                <a class="sidebar-link" href="{{ url_for('categories.all_categories')}}">
+                    <i class="align-middle" data-feather="square"></i>
+                    <span class="align-middle">All Categories
+                    </span>
+                </a>
+            </li>
+
             <li class="sidebar-header">Comments</li>
 
             <li class="sidebar-item">
