--- a/flaskblog/templates/admin/admin-categories.html
+++ b/flaskblog/templates/admin/admin-categories.html
@@ -13,33 +13,33 @@
     <!-- <div class="col-12 col-lg-8 col-xxl-9 d-flex"> -->
     <div class="col-12">
         <div class="card rounded-3 bg-dark">
-            <div class="card-header bg-dark">
-                <h5 class="card-title mb-0">List of all Comments</h5>
+            <div class="card-header bg-dark d-flex justify-content-between">
+                <h5 class="card-title mb-0">List of all categories</h5>
+                <button type="button" id="addCategoryBtn" class="btn btn-dark" href="#" data-toggle="modal"
+                    data-target="#addCategoryModal">
+                    <i class="align-middle me-2" data-feather="plus-square"></i> New Category
+                </button>
+
             </div>
             <div class="card-body">
                 <table class="table table-dark table-hover my-0" id="datatable-posts">
                     <thead>
                         <tr>
-                            <th>Username</th>
-                            <th class="">Post Title</th>
-                            <th class="d-none d-xl-table-cell">Commented At</th>
-                            <th class="">Content</th>
+                            <th>ID</th>
+                            <th class="">Category</th>
                             <th>Actions</th>
                         </tr>
                     </thead>
                     <tbody>
-                        {% for comment in comments %}
+                        {% for category in categories %}
                         <tr>
-                            <td class="comment-author">{{ comment.user.username }}</td>
-                            <td class="">{{ comment.post.title }}</td>
-                            <td class="d-none d-xl-table-cell">{{ comment.date_posted.strftime('%d-%m-%Y %H:%M:%S') }}
-                            </td>
-                            <td class="comment-content">{{ comment.content }}</td>
+                            <td>{{ category.id }}</td>
+                            <td>{{ category.name }}</td>
                             <td class="table-action">
                                 <!-- Button trigger modal -->
                                 <button type="button" class="btn btn-link btn-confirm-delete" data-toggle="modal"
-                                    data-target="#deleteModal" data-comment-id="{{ comment.id }}"
-                                    data-delete-url="{{ url_for('comments.delete_comment', comment_id=comment.id )}}">
+                                    data-target="#deleteModal" data-category-id="{{ category.id }}"
+                                    data-delete-url="{{ url_for('categories.delete_category', category_id=category.id )}}">
                                     <i class="align-middle" data-feather="trash"></i>
                                 </button>
                             </td>
@@ -52,22 +52,19 @@
     </div>
 </div>
 
-<!-- Modal -->
+<!-- Modal for Deleting Category -->
 <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content bg-dark">
             <div class="modal-header border-bottom-0 text-light">
                 <h5 class="modal-title text-light" id="exampleModalCenterTitle">
-                    Delete Comment
+                    Delete Category
                 </h5>
                 <button type="button" class="btn-close text-light" data-bs-dismiss="modal" aria-label="Close">
                 </button>
             </div>
             <div class="modal-body text-light">
-                <h4 class="text-light" id="modalCommentContent">?</h4>
-                <h5 class="text-light" id="modalCommentAuthor"></h5>
-                <br>
-                <p>Are you sure you want to delete this comment permanently ?</p>
+                <p>Are you sure you want to delete this category permanently ?</p>
             </div>
             <div class="modal-footer border-top-0">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
@@ -77,6 +74,33 @@
     </div>
 </div>
 
+<!-- Modal for Adding Categories -->
+<div class="modal fade" id="addCategoryModal" tabindex="-1" aria-labelledby="addCategoryModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content bg-dark">
+            <div class="modal-header border-bottom-0 text-light">
+                <h5 class="modal-title text-light" id="addCategoryModalLabel">Add Category</h5>
+                <button type="button" class="btn-close text-light" data-bs-dismiss="modal" aria-label="Close">
+                </button>
+            </div>
+            <div class="modal-body text-light">
+                <form method="POST" action="{{ url_for('categories.add_category') }}">
+                    {{ form.hidden_tag() }}
+                    <div class="form-group">
+                        {{ form.category.label(class="form-label") }}
+                        {{ form.category(class="form-control bg-dark text-light", placeholder="Enter category name")
+                        }}
+                    </div>
+                    <div class="col-12 mt-3 d-flex justify-content-end">
+                        {{ form.submit(class="btn btn-primary px-5") }}
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 {% endblock %}
 
 {% block scripts %}
@@ -84,20 +108,19 @@
 <script>
     $(document).ready(function () {
         $('#datatable-posts').DataTable({
-            "order": [[2, "desc"]]
+            "order": [[0, "desc"]]
         });
 
         // Show modal and set delete URL when delete button is clicked
         $('.btn-confirm-delete').click(function () {
-            const commentId = $(this).data('comment-id');
             const deleteUrl = $(this).data('delete-url');
-            const commentContent = $(this).closest('tr').find('.comment-content').text();
-            const commentAuthor = $(this).closest('tr').find('.comment-author').text();
-            $('#modalCommentContent').text("Comment: " + commentContent);
-            $('#modalCommentAuthor').text("Written by: " + commentAuthor);
             $('#modalDeleteButton').attr('href', deleteUrl);
             $('#deleteModal').modal('show');
         });
+
+        $("#addCategoryBtn").click(function () {
+            $("#addCategoryModal").modal('show');
+        })
     });
 </script>
 
