--- a/flaskblog/static/css/glavni.css
+++ b/flaskblog/static/css/glavni.css
@@ -1,493 +1,489 @@
 body {
-    background-color: black;
-    background: linear-gradient(to bottom right, rgba(0, 0, 0, .4), rgba(0, 0, 0, .5)), url(images/background.jpg) fixed;
-    margin: 5px 0 5px 0;
+  background-color: black;
+  background: linear-gradient(
+      to bottom right,
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.5)
+    ),
+    url(images/background.jpg) fixed;
+  margin: 5px 0 5px 0;
 }
 
 ::-webkit-scrollbar {
-    width: 10px;
-    background-color: black;
+  width: 10px;
+  background-color: black;
 }
 
 ::-webkit-scrollbar-thumb {
-    border-radius: 5px;
-    background-color: rgba(127, 204, 247, .3);
+  border-radius: 5px;
+  background-color: rgba(127, 204, 247, 0.3);
 }
 
 .alert {
-    text-align: center;
-    width: 75%;
-    margin: 0 auto;
-    margin-top: 20px;
-    position: relative;
-    padding: .75rem 1.25rem;
-    border: 1px solid transparent;
-    border-radius: .25rem;
-    z-index: 1000;
-    font-family: sans-serif;
+  text-align: center;
+  width: 75%;
+  margin: 0 auto;
+  margin-top: 20px;
+  position: relative;
+  padding: 0.75rem 1.25rem;
+  /* border: 1px solid transparent;
+  border-radius: 0.25rem; */
+  border-radius: 4px;
+  border-style: solid;
+  border-width: 1px 1px 1px 10px !important;
+  z-index: 1000;
+  font-family: sans-serif;
 }
 
 .alert-success {
-    color: #155724;
-    background-color: #d4edda;
-    border-color: #c3e6cb;
+  background-color: rgba(227, 253, 235, 1);
+  border-color: rgba(38, 179, 3, 1);
+  color: rgba(60, 118, 61, 1);
 }
 
-.alert-danger, .alert-error {
-    color: #721c24;
-    background-color: #f8d7da;
-    border-color: #f5c6cb;
+.alert-danger,
+.alert-error {
+  background-color: rgba(248, 215, 218, 1);
+  border-color: rgba(220, 53, 69, 1);
+  color: rgba(114, 28, 36, 1);
 }
 
-.alert-info, .alert-message {
-    color: #0c5460;
-    background-color: #d1ecf1;
-    border-color: #bee5eb;
+.alert-info,
+.alert-message {
+  background-color: rgba(217, 237, 247, 1);
+  color: rgba(49, 112, 143, 1);
+  border-color: rgba(126, 182, 193, 1);
 }
-
-
-
 
 .lang {
-    width: 100%;
-    font-family: 'Orbitron';
-    font-size: 20px;
-    background-color: rgba(0, 0, 0, .5);
-    text-align: center;
+  width: 100%;
+  font-family: "Orbitron";
+  font-size: 20px;
+  background-color: rgba(0, 0, 0, 0.5);
+  text-align: center;
 }
 
 /* Side */
 
 .sideDiv {
-    color: white;
-    text-align: center;
-    background-color: rgba(0, 0, 0, .8);
-    width: 95%;
-    height: 200px;
-    margin: 50px auto;
-    border-radius: 20px;
-    position: relative;
-    -webkit-box-shadow: 1px 3px 20px 5px 0px rgba(71, 71, 71, .5);
-    -moz-box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, .5);
-    box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, .5);
-
+  color: white;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.8);
+  width: 95%;
+  height: 200px;
+  margin: 50px auto;
+  border-radius: 20px;
+  position: relative;
+  -webkit-box-shadow: 1px 3px 20px 5px 0px rgba(71, 71, 71, 0.5);
+  -moz-box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, 0.5);
+  box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, 0.5);
 }
 
 .sideDiv p {
-    padding: 10px 5px;
-    font-family: 'Work Sans', sans-serif;
-    font-size: 13px;
-    color: dimgray;
-    transition: .5s;
+  padding: 10px 5px;
+  font-family: "Work Sans", sans-serif;
+  font-size: 13px;
+  color: dimgray;
+  transition: 0.5s;
 }
 
 .sideDiv p:hover {
-    color: white;
+  color: white;
 }
 
 .sideDiv h5 {
-    font-size: 18px;
-    font-weight: 500;
-    padding: 0;
-    padding-top: 15px;
-    margin: 0;
-    margin-top: 10px;
-    font-family: 'Orbitron';
-    transition: .5s;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 0;
+  padding-top: 15px;
+  margin: 0;
+  margin-top: 10px;
+  font-family: "Orbitron";
+  transition: 0.5s;
 }
 
 .sideDiv h5:hover {
-    color: #7FCCF7;
+  color: #7fccf7;
 }
 
 .sideDivBtn {
-    cursor: pointer;
-    background-color: black;
-    color: #7FCCF7;
-    font-size: 12px;
-    font-family: 'Orbitron';
-    font-weight: 500;
-    -webkit-box-shadow: 1px 3px 20px 5px 0px rgba(71, 71, 71, .8);
-    -moz-box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, .8);
-    box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, .8);
-    border: none;
-    border-radius: 15px;
-    padding: 0 10px;
-    height: 40px;
-    position: absolute;
-    bottom: -20px;
-    left: 50%;
-    transform: translate(-50%, 0px);
+  cursor: pointer;
+  background-color: black;
+  color: #7fccf7;
+  font-size: 12px;
+  font-family: "Orbitron";
+  font-weight: 500;
+  -webkit-box-shadow: 1px 3px 20px 5px 0px rgba(71, 71, 71, 0.8);
+  -moz-box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, 0.8);
+  box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, 0.8);
+  border: none;
+  border-radius: 15px;
+  padding: 0 10px;
+  height: 40px;
+  position: absolute;
+  bottom: -20px;
+  left: 50%;
+  transform: translate(-50%, 0px);
 }
 
 .sideDivBtn:hover {
-    color: rgb(0, 162, 255);
-    -webkit-box-shadow: 1px 3px 20px 5px 0px rgba(71, 71, 71, 1);
-    -moz-box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, 1);
-    box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, 1);
+  color: rgb(0, 162, 255);
+  -webkit-box-shadow: 1px 3px 20px 5px 0px rgba(71, 71, 71, 1);
+  -moz-box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, 1);
+  box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, 1);
 }
 
 .sideDivBtn:before {
-    content: '';
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    background-color: #7FCCF7;
-    opacity: .5;
+  content: "";
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background-color: #7fccf7;
+  opacity: 0.5;
 }
 
 .sideDivBtn:after {
-    transition: all 0.3s ease;
-    -webkit-transition: all 0.3s ease;
-    content: "\f061";
-    font-family: FontAwesome;
-    margin-left: -10px;
-    opacity: 0;
-    vertical-align: middle;
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  content: "\f061";
+  font-family: FontAwesome;
+  margin-left: -10px;
+  opacity: 0;
+  vertical-align: middle;
 }
 
 .sideDivBtn:hover:after {
-    margin-left: 5px;
-    opacity: 1;
-    color: rgb(0, 162, 255);
+  margin-left: 5px;
+  opacity: 1;
+  color: rgb(0, 162, 255);
 }
 
 .pagination {
-    margin: 0 auto;
-    padding: 5px;
-    border: none;
-    border-radius: 15px;
-    color: white;
-    text-align: center;
+  margin: 0 auto;
+  padding: 5px;
+  border: none;
+  border-radius: 15px;
+  color: white;
+  text-align: center;
 }
 
 .pageBtn {
-    display: inline-block;
-    font-family: 'Orbitron';
-    color: white;
-    font-size: 16px;
-    text-decoration: none;
-    font-weight: bold;
-    text-align: center;
-    padding: 5px;
-    width: 20px;
-    height: 20px;
-    background-color: transparent;
-    border: solid 1px #bbb;
-    border-radius: 5px;
-
+  display: inline-block;
+  font-family: "Orbitron";
+  color: white;
+  font-size: 16px;
+  text-decoration: none;
+  font-weight: bold;
+  text-align: center;
+  padding: 5px;
+  width: 20px;
+  height: 20px;
+  background-color: transparent;
+  border: solid 1px #bbb;
+  border-radius: 5px;
 }
 
 .currentPageBtn {
-    color: #7FCCF7;
-    border: solid 1.3px #7FCCF7;
-    border-radius: 5px;
+  color: #7fccf7;
+  border: solid 1.3px #7fccf7;
+  border-radius: 5px;
 }
 
 .pageBtn:first-child {
-    margin-left: 20px;
+  margin-left: 20px;
 }
 
 .pageBtn:last-child {
-    margin-right: 20px;
+  margin-right: 20px;
 }
-
 
 /* POST MAIN */
 
 .postMain {
-    color: white;
-    background-color: rgba(0, 0, 0, 0.6);
-    border-radius: 25px;
-    -webkit-box-shadow: 1px 3px 20px 5px 0px rgba(71, 71, 71, .5);
-    -moz-box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, .5);
-    box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, .5);
+  color: white;
+  background-color: rgba(0, 0, 0, 0.6);
+  border-radius: 25px;
+  -webkit-box-shadow: 1px 3px 20px 5px 0px rgba(71, 71, 71, 0.5);
+  -moz-box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, 0.5);
+  box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, 0.5);
 }
 
 .postTopContainer {
-    position: relative;
+  position: relative;
 }
 
 .postMainImg {
-    width: 100%;
-    border-radius: 25px;
+  width: 100%;
+  border-radius: 25px;
 }
 
 .postMain h1 {
-    font-family: 'Orbitron';
-    text-align: center;
-    font-size: 35px;
-    color: #7FCCF7;
-    z-index: 1000;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  font-family: "Orbitron";
+  text-align: center;
+  font-size: 35px;
+  color: #7fccf7;
+  z-index: 1000;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .postMain h2 {
-    font-family: 'Orbitron';
-    text-align: center;
-    font-size: 18px;
-    color: dimgray;
+  font-family: "Orbitron";
+  text-align: center;
+  font-size: 18px;
+  color: dimgray;
 }
 
 .postMain h5 {
-    font-family: 'Orbitron';
-    font-size: 12px;
-    color: dimgray;
-    margin: 10px;
+  font-family: "Orbitron";
+  font-size: 12px;
+  color: dimgray;
+  margin: 10px;
 }
 
 .postMainDate {
-    float: left;
+  float: left;
 }
 
 .postMainAuthor {
-    float: right;
+  float: right;
 }
 
 .postMain p {
-    text-align: justify;
-    padding: 10px;
-    font-family: 'Work Sans', sans-serif;
-    font-size: 14px;
+  text-align: justify;
+  padding: 10px;
+  font-family: "Work Sans", sans-serif;
+  font-size: 14px;
 }
 
 .postMain p img {
-    width: 50%;
-    border-radius: 15px;
-    -webkit-box-shadow: 1px 3px 20px 5px 0px rgba(71, 71, 71, .5);
-    -moz-box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, .5);
-    box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, .5);
-
+  width: 50%;
+  border-radius: 15px;
+  -webkit-box-shadow: 1px 3px 20px 5px 0px rgba(71, 71, 71, 0.5);
+  -moz-box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, 0.5);
+  box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, 0.5);
 }
 
 .postMainContent {
-    padding: 10px 25px;
+  padding: 10px 25px;
 }
 
 /* COMMENTS */
 
 .commentList {
-    width: 80%;
-    margin: 25px auto;
-    padding: 10px;
-    border-radius: 15px;
-    color: white;
-    font-family: 'Work Sans', sans-serif;
-    font-weight: 300;
-    font-size: 14px;
-    position: relative;
+  width: 80%;
+  margin: 25px auto;
+  padding: 10px;
+  border-radius: 15px;
+  color: white;
+  font-family: "Work Sans", sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  position: relative;
 }
 
 .commentDisplay {
-    background-color: rgba(0, 0, 0, .8);
-    height: 50px;
-    margin-bottom: 5px;
-    border-radius: 15px;
-    
-    -webkit-box-shadow: 1px 3px 20px 5px 0px rgba(71, 71, 71, .3);
-    -moz-box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, .3);
-    box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, .3);
+  background-color: rgba(0, 0, 0, 0.8);
+  height: 50px;
+  margin-bottom: 5px;
+  border-radius: 15px;
 
+  -webkit-box-shadow: 1px 3px 20px 5px 0px rgba(71, 71, 71, 0.3);
+  -moz-box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, 0.3);
+  box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, 0.3);
 }
-.commentListLeft{
-    width: 30%;
-    margin: 0;
-    float: left;
-    text-align: center;
+.commentListLeft {
+  width: 30%;
+  margin: 0;
+  float: left;
+  text-align: center;
 }
 .commentListRight {
-    width: 65%;
-    margin: 0;
-    float: right;
-    text-align: left;
+  width: 65%;
+  margin: 0;
+  float: right;
+  text-align: left;
 }
 
 .commentUser {
-    margin-top: 5px;
-    font-family: 'Orbitron';
-    color: #7FCCF7;
-    font-size: 18px;
+  margin-top: 5px;
+  font-family: "Orbitron";
+  color: #7fccf7;
+  font-size: 18px;
 }
 .comment {
-    padding: 10px;
+  padding: 10px;
 }
 
 .commentDate {
-    color: dimgray;
-    font-family: 'Orbitron';
-    font-size: 10px;
+  color: dimgray;
+  font-family: "Orbitron";
+  font-size: 10px;
 }
 
 /* ABOUT */
 .admins {
-    margin: 50px auto;
-
+  margin: 50px auto;
 }
 
 .flip-card {
-    display: block;
-    background-color: transparent;
-    width: 200px;
-    height: 200px;
-    margin: 10px auto;
+  display: block;
+  background-color: transparent;
+  width: 200px;
+  height: 200px;
+  margin: 10px auto;
 }
 
 .flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
 .flip-card-front,
 .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
 }
 
 .flip-card-front {
-    background-color: #bbb;
-    color: black;
-    z-index: 2;
+  background-color: #bbb;
+  color: black;
+  z-index: 2;
 }
 
 .flip-card-back {
-    background-color: rgba(0, 0, 0, .8);
-    color: white;
-    transform: rotateY(180deg);
-    z-index: 1;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  transform: rotateY(180deg);
+  z-index: 1;
 }
 
 /* CONTACT */
 .contact {
-    color: white;
-    font-family: 'Work Sans', sans-serif;
-    margin: 0 auto;
-
+  color: white;
+  font-family: "Work Sans", sans-serif;
+  margin: 0 auto;
 }
 
 .contact p {
-    font-size: 20px;
-    text-align: center;
+  font-size: 20px;
+  text-align: center;
 }
 
-@media only screen and (min-width : 950px) {
-    .grid-container {
-        display: grid;
-        grid-template-columns: 1fr repeat(2, minmax(auto, 250px)) 1fr;
-        grid-template-rows: repeat(4, 300px);
-        grid-gap: 5px;
-        height: auto;
-        width: 95%;
-        margin: 0 auto;
-        max-width: 1200px;
-    }
+@media only screen and (min-width: 950px) {
+  .grid-container {
+    display: grid;
+    grid-template-columns: 1fr repeat(2, minmax(auto, 250px)) 1fr;
+    grid-template-rows: repeat(4, 300px);
+    grid-gap: 5px;
+    height: auto;
+    width: 95%;
+    margin: 0 auto;
+    max-width: 1200px;
+  }
 
-    /* MAIN PART*/
-    .main {
-        height: auto;
-        min-width: 600px;
-        max-width: 600px;
-        margin: 50px auto 30px auto;
+  /* MAIN PART*/
+  .main {
+    height: auto;
+    min-width: 600px;
+    max-width: 600px;
+    margin: 50px auto 30px auto;
 
-        grid-column: 2/3;
-    }
+    grid-column: 2/3;
+  }
 
-    .leftSide {
-        grid-column: 1/2;
-        grid-row: 1/2;
-        margin-top: 25px;
-    }
+  .leftSide {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    margin-top: 25px;
+  }
 
-    .rightSide {
-        grid-column: 3/4;
-        grid-row: 1/2;
-        margin-top: 25px;
-    }
+  .rightSide {
+    grid-column: 3/4;
+    grid-row: 1/2;
+    margin-top: 25px;
+  }
 
-    .mainContent {
-        display: grid;
-        grid-template-columns: 150px 1fr 150px;
-        width: 900px;
-        margin: 50px auto;
-        padding: 0 10px;
-        border-radius: 25px;
-        background-color: rgba(0, 0, 0, .5);
+  .mainContent {
+    display: grid;
+    grid-template-columns: 150px 1fr 150px;
+    width: 900px;
+    margin: 50px auto;
+    padding: 0 10px;
+    border-radius: 25px;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
 
-    }
+  .flip-card {
+    display: inline-block;
+    margin: 0 auto;
+  }
 
-    .flip-card {
-        display: inline-block;
-        margin: 0 auto;
-    }
+  .admins {
+    width: 600px;
+    margin: 50px auto;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    padding: 10px 30px;
+    -webkit-box-shadow: 1px 3px 20px 5px 0px rgba(71, 71, 71, 0.5);
+    -moz-box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, 0.5);
+    box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, 0.5);
+  }
 
-    .admins {
-        width: 600px;
-        margin: 50px auto;
-        background-color: rgba(0, 0, 0, .5);
-        border-radius: 10px;
-        padding: 10px 30px;
-        -webkit-box-shadow: 1px 3px 20px 5px 0px rgba(71, 71, 71, .5);
-        -moz-box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, .5);
-        box-shadow: 1px 3px 20px 0px rgba(71, 71, 71, .5);
-    }
-
-    .aboutText {
-        color: white;
-        font-family: 'Work Sans', sans-serif;
-        font-size: 20px;
-        text-align: center;
-        line-height: 35px;
-    }
+  .aboutText {
+    color: white;
+    font-family: "Work Sans", sans-serif;
+    font-size: 20px;
+    text-align: center;
+    line-height: 35px;
+  }
 }
 
 @media only screen and (max-width: 850px) {
-    .sideDiv {
-        min-width: 60%;
-        max-width: 380px;
-        margin: 50px auto;
-    }
+  .sideDiv {
+    min-width: 60%;
+    max-width: 380px;
+    margin: 50px auto;
+  }
 }
-
 
 @media only screen and (max-width: 600px) {
-    .commentList {
-        width: 90%;
-    }
-    .postMain p img {
-        width: 75%;
-    }
-
-
+  .commentList {
+    width: 90%;
+  }
+  .postMain p img {
+    width: 75%;
+  }
 }
 @media only screen and (max-width: 420px) {
-    .postMain p img {
-        width: 100%;
-    }
+  .postMain p img {
+    width: 100%;
+  }
 }
 
 @media only screen and (max-width: 360px) {
-    .alert {
-        margin-top: 0;
-        padding: .35rem 1.25rem;
-    }
+  .alert {
+    margin-top: 0;
+    padding: 0.35rem 1.25rem;
+  }
 }
 
 @media only screen and (max-width: 320px) {
-    .alert {
-        margin-top: -23px;
-        padding: .35rem 1.25rem;
-    }
+  .alert {
+    margin-top: -23px;
+    padding: 0.35rem 1.25rem;
+  }
 }
