--- a/flaskblog/templates/about.html
+++ b/flaskblog/templates/about.html
@@ -2,17 +2,15 @@
 
 
 {% block content %}
-<div id="mainPage">
-    <div class="admins">
-        <p class="aboutText">
-            Hello dudes and dudettes! <br>
-            We are Ante, Dorian and Ivan, creators of SoFtYTech site. 
-            From our early ages we have been following everything remotely related to PC and gaming world. 
-            In hope of helping you we will talk about tech news and our own positive and negative experiences.
-            <br>
-            Have fun and come back again.
-        </p>
-    </div>
+<div class="mainContent">
+    <p class="aboutText">
+        Hello dudes and dudettes! <br>
+        We are Ante, Dorian and Ivan, creators of SoFtYTech site.
+        From our early ages we have been following everything remotely related to PC and gaming world.
+        In hope of helping you we will talk about tech news and our own positive and negative experiences.
+        <br>
+        Have fun and come back again.
+    </p>
 
 </div>
 {% endblock %}
