--- a/flaskblog/templates/form-templates/changePassword.html
+++ b/flaskblog/templates/form-templates/changePassword.html
@@ -1,46 +1,46 @@
 {% extends "base.html" %}
 
 {% block content %}
-<form class="loginForm" method="POST" action="">
+<form class="form" method="POST" action="">
     {{ form.hidden_tag() }}
     <h1>Change Password</h1>
     {% if form.old_password.errors %}
-    {{ form.old_password(class="form-control loginInput is-invalid") }}
+    {{ form.old_password(class="form-control form-input is-invalid") }}
     <div class="invalid-feedback">
         {% for error in form.old_password.errors %}
         <span>{{ error }}</span>
         {% endfor %}
     </div>
     {% else %}
-    {{ form.old_password(class="loginInput", placeholder="Old Password") }}
+    {{ form.old_password(class="form-input", placeholder="Old Password") }}
     {% endif %}
     <br>
 
     {% if form.new_password.errors %}
-    {{ form.new_password(class="form-control loginInput is-invalid") }}
+    {{ form.new_password(class="form-control form-input is-invalid") }}
     <div class="invalid-feedback">
         {% for error in form.new_password.errors %}
         <span>{{ error }}</span>
         {% endfor %}
     </div>
     {% else %}
-    {{ form.new_password(class="loginInput", placeholder="New Password") }}
+    {{ form.new_password(class="form-input", placeholder="New Password") }}
     {% endif %}
     <br>
 
     {% if form.retype_password.errors %}
-    {{ form.retype_password(class="form-control loginInput is-invalid") }}
+    {{ form.retype_password(class="form-control form-input is-invalid") }}
     <div class="invalid-feedback">
         {% for error in form.retype_password.errors %}
         <span>{{ error }}</span>
         {% endfor %}
     </div>
     {% else %}
-    {{ form.retype_password(class="loginInput", placeholder="Retype Password") }}
+    {{ form.retype_password(class="form-input", placeholder="Retype Password") }}
     {% endif %}
     <br>
 
-    {{ form.submit(class="loginButton") }}
+    {{ form.submit(class="form-submit-button") }}
 </form>
 
 {% endblock %}
