--- a/flaskblog/templates/form-templates/contact.html
+++ b/flaskblog/templates/form-templates/contact.html
@@ -3,55 +3,55 @@
 
 {% block content %}
 
-<div class="contactForm">
+<div class="form">
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <p>Feel free to contact us..</p>
         {% if form.name.errors %}
-        {{ form.name(class="form-control contactInput is-invalid") }}
+        {{ form.name(class="form-control form-input is-invalid") }}
         <div class="invalid-feedback">
             {% for error in form.name.errors %}
             <span>{{ error }}</span>
             {% endfor %}
         </div>
         {% else %}
-        {{ form.name(class="contactInput ", placeholder="name") }}
+        {{ form.name(class="form-input ", placeholder="Enter your name...") }}
         {% endif %}
 
         {% if form.email.errors %}
-        {{ form.email(class="form-control contactInput is-invalid") }}
+        {{ form.email(class="form-control form-input is-invalid") }}
         <div class="invalid-feedback">
             {% for error in form.email.errors %}
             <span>{{ error }}</span>
             {% endfor %}
         </div>
         {% else %}
-        {{ form.email(class="contactInput", placeholder="Email") }}
+        {{ form.email(class="form-input", placeholder="Enter your email...") }}
         {% endif %}
 
         {% if form.subject.errors %}
-        {{ form.subject(class="form-control contactInput is-invalid") }}
+        {{ form.subject(class="form-control form-input is-invalid") }}
         <div class="invalid-feedback">
             {% for error in form.subject.errors %}
             <span>{{ error }}</span>
             {% endfor %}
         </div>
         {% else %}
-        {{ form.subject(class="contactInput", placeholder="subject") }}
+        {{ form.subject(class="form-input", placeholder="Enter message subject...") }}
         {% endif %}
 
         {% if form.message.errors %}
-        {{ form.message(class="form-control contactInput is-invalid") }}
+        {{ form.message(class="form-control form-input form-textarea is-invalid") }}
         <div class="invalid-feedback">
             {% for error in form.message.errors %}
             <span>{{ error }}</span>
             {% endfor %}
         </div>
         {% else %}
-        {{ form.message(class="contactMessage", placeholder="message") }}
+        {{ form.message(class="form-input form-textarea", placeholder="Type your message...") }}
         {% endif %}
 
-        {{ form.submit(class="registerButton") }}
+        {{ form.submit(class="form-submit-button") }}
     </form>
 </div>
 
