--- a/flaskblog/templates/form-templates/resetPassword.html
+++ b/flaskblog/templates/form-templates/resetPassword.html
@@ -1,22 +1,22 @@
 {% extends "base.html" %}
 
 {% block content %}
-<form class="loginForm" method="POST" action="">
+<form class="form" method="POST" action="">
     {{ form.hidden_tag() }}
     <h1>Reset Password</h1>
     {% if form.email.errors %}
-    {{ form.email(class="form-control loginInput is-invalid") }}
+    {{ form.email(class="form-control form-input is-invalid") }}
     <div class="invalid-feedback">
         {% for error in form.email.errors %}
         <span>{{ error }}</span>
         {% endfor %}
     </div>
     {% else %}
-    {{ form.email(class="loginInput", placeholder="Email") }}
+    {{ form.email(class="form-input", placeholder="Email") }}
     {% endif %}
     <br>
 
-    {{ form.submit(class="loginButton") }}
+    {{ form.submit(class="form-submit-button") }}
 </form>
 
 {% endblock %}
