--- a/flaskblog/templates/includes/blogPost.html
+++ b/flaskblog/templates/includes/blogPost.html
@@ -1,15 +1,25 @@
+<!-- Prvi -->
 <div class="blog-card" onclick="window.location.href='{{url_for('main.post', slug=post.slug)}}'">
-    <div class="photo photo1"><img src="{{ url_for('static', filename='upload/media/images/head_Images/' + post.headImg) }}" alt=""></div>
-    <ul class="details">
-        <li class="author"><a href="#">{{ post.author }}</a></li>
-        <li class="date">{{ post.date_posted.strftime('%d-%b-%Y') }}</li>
-    </ul>
+    <div class="meta">
+        <div class="photo"
+            style="
+                    background-image: url({{ url_for('static', filename='upload/media/images/head_Images/' + post.headImg) }})"></div>
+        <ul class="details">
+            <li class="author">{{ post.author }}</li>
+            <li class="date">{{ post.date_posted.strftime('%d-%b-%Y') }}</li>
+            <li class="tags">
+                <ul>
+                    <li>{{ post.category.name }}</li>
+                </ul>
+            </li>
+        </ul>
+    </div>
     <div class="description">
         <h1>{{ post.title }}</h1>
         <h2>{{ post.subtitle }}</h2>
-        <p class="summary">{{ post.description }}</p>
-        <a href="{{ url_for('main.post', slug=post.slug) }}">Read More</a>
+        <p>{{ post.description }}</p>
+        <p class="read-more">
+            <a href="{{ url_for('main.post', slug=post.slug) }}">Read More</a>
+        </p>
     </div>
 </div>
-<div class="spacer"></div>
-
