--- a/flaskblog/templates/index.html
+++ b/flaskblog/templates/index.html
@@ -1,57 +1,38 @@
 {% extends "base.html" %} {% block content %}
 
-<div class="mainContent">
-  <div class="main">
-    <div class="search">
-      <form class="searchForm" method="POST" action="">
-        {{ form.hidden_tag() }} {{ form.search(class="searchInput",
-        placeholder="Search..") }}
-        <button
-          class="searchBtn"
-          id="submit"
-          name="submit"
-          type="submit"></button>
-        <!-- <input class="searchBtn" id="submit" name="submit" type="submit" value="&#xf105"> -->
-      </form>
-    </div>
-    {% for post in posts.items %} {% include 'includes/blogPost.html' %} {%
-    endfor %}
+<div class="main-content">
 
-    <div class="pagination">
-      {% set prev = posts.page - 1 %} {% if prev > 0 %}
-      <a class="pageBtn" href="{{ url_for('main.home', page=prev) }}"
-        ><i class="fas fa-chevron-left"></i
-      ></a>
-      {% else %}
-      <a class="pageBtn" href="{{ url_for('main.home', page=1) }}"
-        ><i class="fas fa-chevron-left"></i
-      ></a>
-      {% endif %} {% for page_num in posts.iter_pages(left_edge=1, right_edge=1,
-      left_current=1, right_current=2) %} {% if page_num %} {% if posts.page ==
-      page_num %}
-      <a
-        class="pageBtn currentPageBtn"
-        href="{{ url_for('main.home', page=page_num) }}"
-        >{{ page_num }}</a
-      >
-      {% else %}
-      <a class="pageBtn" href="{{ url_for('main.home', page=page_num) }}"
-        >{{ page_num }}</a
-      >
-      {% endif %} {% else %} ... {% endif %} {% endfor %} {% set next =
-      posts.page + 1 %} {% if next > posts.pages %}
-      <a class="pageBtn" href="{{ url_for('main.home', page=posts.pages) }}"
-        ><i class="fas fa-chevron-right"></i
-      ></a>
-      {% else %}
-      <a class="pageBtn" href="{{ url_for('main.home', page=next) }}"
-        ><i class="fas fa-chevron-right"></i
-      ></a>
-      {% endif %}
-    </div>
+  <div class="search">
+    <form class="searchForm" method="POST" action="">
+      {{ form.hidden_tag() }} {{ form.search(class="searchInput",
+      placeholder="Search..") }}
+      <button class="searchBtn" id="submit" name="submit" type="submit"></button>
+    </form>
   </div>
 
-  <div class="leftSide"></div>
+  <!-- Prvi -->
+  {% for post in posts.items %} {% include 'includes/blogPost.html' %} {%
+  endfor %}
+  <div class="pagination">
+    {% set prev = posts.page - 1 %} {% if prev > 0 %}
+    <a class="pageBtn" href="{{ url_for('main.home', page=prev) }}"><i class="fas fa-chevron-left"></i></a>
+    {% else %}
+    <a class="pageBtn" href="{{ url_for('main.home', page=1) }}"><i class="fas fa-chevron-left"></i></a>
+    {% endif %} {% for page_num in posts.iter_pages(left_edge=1, right_edge=1,
+    left_current=1, right_current=2) %} {% if page_num %} {% if posts.page ==
+    page_num %}
+    <a class="pageBtn currentPageBtn" href="{{ url_for('main.home', page=page_num) }}">{{ page_num }}</a>
+    {% else %}
+    <a class="pageBtn" href="{{ url_for('main.home', page=page_num) }}">{{ page_num }}</a>
+    {% endif %} {% else %} ... {% endif %} {% endfor %} {% set next =
+    posts.page + 1 %} {% if next > posts.pages %}
+    <a class="pageBtn" href="{{ url_for('main.home', page=posts.pages) }}"><i class="fas fa-chevron-right"></i></a>
+    {% else %}
+    <a class="pageBtn" href="{{ url_for('main.home', page=next) }}"><i class="fas fa-chevron-right"></i></a>
+    {% endif %}
+  </div>
 </div>
 
-{% include "includes/topBtn.html" %} {% endblock %}
+</div>
+
+{% endblock %}
